1. splited config.yml 2. marked files as temp

--- a/pipeline_config.yml
+++ b/pipeline_config.yml
@@ -17,50 +17,4 @@ silva_split: 10
 
 bacteria_split: 20
 
-genomes:
-    univec: "genomes/UniVec_Core.fasta"
-    human: "genomes/GRCh38.primary_assembly.genome.fa"
-    U13369: "genomes/U13369.1.fasta"
-
-annotations:
-    gencode: "genomes/gencode_human_annotation.gtf"
-    tRNA: "genomes/tRNA.gtf"
-    piRNA: "genomes/piRNA.gtf"
-
-urls:
-    # The univec library from NCBI
-    univec: "ftp://ftp.ncbi.nlm.nih.gov/pub/UniVec/UniVec_Core"
-    # The complete rRNA gene sequence from NCBI
-    # U13369: "https://ncbi.nlm.nih.gov/nuccore/U13369.1?report=fasta"
-    # The 5s RNA gene from ensembl
-    rna5s1: "http://rest.ensembl.org/sequence/id/ENSG00000199352?expand_3prime=600&expand_5prime=600&content-type=text/x-fasta"
-    # Human genome from Gencode
-    human: "ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_32/GRCh38.primary_assembly.genome.fa.gz"
-    # tRNA annotation from gencode, generated from GtRNAdb
-    tRNA: "ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_32/gencode.v32.tRNAs.gtf.gz"
-    # piRNA annotation
-    piRNA: "http://www.regulatoryrna.org/database/piRNA/download/archive/v2.0/bed/hsa.bed.gz"
-    # gencode human genome annotation
-    gencode: "ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_32/gencode.v32.primary_assembly.annotation.gtf.gz"
-    # RepeatMasker
-    repeat_masker: "http://www.repeatmasker.org/genomes/hg38/RepeatMasker-rm405-db20140131/hg38.fa.out.gz"
-    # miRBase
-    miRBase: ftp://mirbase.org/pub/mirbase/22.1/hairpin.fa.gz -O $genome_fa.gz
-    # SILVA LSU
-    silva_lsu: https://www.arb-silva.de/fileadmin/silva_databases/release_132/Exports/SILVA_132_LSUParc_tax_silva.fasta.gz
-    # SILVA SSU
-    silva_ssu: https://www.arb-silva.de/fileadmin/silva_databases/release_132/Exports/SILVA_132_SSUParc_tax_silva.fasta.gz
-    # SILVA NCBI taxonomy mapper for LSU
-    silva_taxmap_lsu: https://www.arb-silva.de/fileadmin/silva_databases/release_132/Exports/taxonomy/taxmap_ncbi_lsu_parc_132.txt.gz
-    # SILVA NCBI taxonomy mapper for SSU
-    silva_taxmap_ssu: https://www.arb-silva.de/fileadmin/silva_databases/release_132/Exports/taxonomy/taxmap_ncbi_ssu_parc_132.txt.gz
-    # NCBI taxdump
-    ncbi_taxdump: ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdump.tar.gz
-
-tax_levels:
-    - "phylum"
-    - "class"
-    - "order"
-    - "family"
-    - "genus"
-    - "species"
+rRNA: "genomes/U13369.1.fasta"
