--- a/pipeline_config.yml
+++ b/pipeline_config.yml
@@ -1,11 +1,11 @@
 # path to all samples
 samples:
-    SRR8114380: "../input/SRR8114380/SRR8114380_1.fastq.gz"
-    SRR8114381: "../input/SRR8114381/SRR8114381_1.fastq.gz"
-    SRR8114382: "../input/SRR8114382/SRR8114382_1.fastq.gz"
-    SRR8114383: "../input/SRR8114383/SRR8114383_1.fastq.gz"
-    SRR8114384: "../input/SRR8114384/SRR8114384_1.fastq.gz"
-    SRR8114385: "../input/SRR8114385/SRR8114385_1.fastq.gz"
+    SRR8114380: "input/SRR8114380/SRR8114380_1.fastq.gz"
+    SRR8114381: "input/SRR8114381/SRR8114381_1.fastq.gz"
+    SRR8114382: "input/SRR8114382/SRR8114382_1.fastq.gz"
+    SRR8114383: "input/SRR8114383/SRR8114383_1.fastq.gz"
+    SRR8114384: "input/SRR8114384/SRR8114384_1.fastq.gz"
+    SRR8114385: "input/SRR8114385/SRR8114385_1.fastq.gz"
 
 # the sequencing adapter
 adapter: "TGGAATTCTCGGGTGCCAAGGAACTC"
@@ -13,8 +13,8 @@ adapter: "TGGAATTCTCGGGTGCCAAGGAACTC"
 # whether map to exogenous database
 exogenous_mapping: true
 
-# Set it to false if your HPC does not use scratch
-use_scratch: true
+# Delete this line or set it to null if your HPC does not use scratch
+scratch: "/scratch"
 
 # path to the rRNA fasta. Must be downloaded from:
 # "https://ncbi.nlm.nih.gov/nuccore/U13369.1?report=fasta"
@@ -23,6 +23,5 @@ rRNA: "genomes/U13369.1.fasta"
 # Parallel processing when map to exogenous database.
 # The databases are large, so using a large parallel number will increase the
 # processing speed but use more storage space.
-parallel:
-    silva: 10
-    bacteria: 10
+silva_align_parallel: 10
+bacteria_align_parallel: 20
