--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ dependencies:
   - _libgcc_mutex=0.1
   - aioeasywebdav=2.4.0
   - aiohttp=3.6.1
+  - alsa-lib=1.1.5
   - appdirs=1.4.3
   - async-timeout=3.0.1
   - attrs=19.3.0
@@ -18,10 +19,10 @@ dependencies:
   - boto3=1.10.19
   - botocore=1.13.19
   - bzip2=1.0.8
-  - ca-certificates=2019.9.11
+  - ca-certificates=2019.11.28
   - cachetools=3.1.1
   - cairo=1.16.0
-  - certifi=2019.9.11
+  - certifi=2019.11.28
   - cffi=1.13.2
   - chardet=3.0.4
   - configargparse=0.13.0
@@ -35,8 +36,10 @@ dependencies:
   - docutils=0.15.2
   - dropbox=9.4.0
   - expat=2.2.5
+  - fastqc=0.11.8
   - fftw=3.3.8
   - filechunkio=1.8
+  - font-ttf-dejavu-sans-mono=2.37
   - fontconfig=2.13.1
   - freetype=2.10.0
   - fribidi=1.0.5
@@ -74,6 +77,7 @@ dependencies:
   - jsonschema=3.1.1
   - kiwisolver=1.1.0
   - krb5=1.16.3
+  - lcms2=2.9
   - libblas=3.8.0
   - libcblas=3.8.0
   - libclang=9.0.0
@@ -114,12 +118,14 @@ dependencies:
   - nspr=4.23
   - nss=3.47
   - numpy=1.17.3
+  - openjdk=11.0.1
   - openjpeg=2.3.1
   - openssl=1.1.1d
   - pandas=0.25.3
   - pango=1.42.4
   - paramiko=2.6.0
   - pathos=0.2.5
+  - patsy=0.5.1
   - pcre=8.43
   - perl=5.26.2
   - pip=19.3.1
@@ -157,6 +163,8 @@ dependencies:
   - rsa=4.0
   - s3transfer=0.2.1
   - samtools=1.9
+  - scipy=1.3.2
+  - seaborn=0.9.0
   - setuptools=41.6.0
   - six=1.13.0
   - smmap2=2.0.5
@@ -164,12 +172,15 @@ dependencies:
   - snakemake-minimal=5.8.1
   - sqlite=3.30.1
   - star=2.7.3a
+  - statsmodels=0.10.2
   - tk=8.6.9
   - tornado=6.0.3
   - urllib3=1.25.7
   - wheel=0.33.6
   - wrapt=1.11.2
   - xmlrunner=1.7.7
+  - xorg-fixesproto=5.0
+  - xorg-inputproto=2.3.2
   - xorg-kbproto=1.0.7
   - xorg-libice=1.0.10
   - xorg-libsm=1.2.3
@@ -177,9 +188,13 @@ dependencies:
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
   - xorg-libxext=1.3.4
+  - xorg-libxfixes=5.0.3
+  - xorg-libxi=1.7.10
   - xorg-libxpm=3.5.12
   - xorg-libxrender=0.9.10
   - xorg-libxt=1.1.5
+  - xorg-libxtst=1.2.3
+  - xorg-recordproto=1.14.2
   - xorg-renderproto=0.11.1
   - xorg-xextproto=7.3.0
   - xorg-xproto=7.0.31
