--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
     - docker
 
 before_install:
-    - docker pull zhuchcn/exce-rna-pipeline:lateste
+    - docker pull zhuchcn/exce-rna-pipeline:latest
 
 script:
     - docker run -v $(pwd):/home -it zhuchcn/exce-rna-pipeline /bin/bash -c "cd /home && snakemake -np"
