fix primary language attempt 2

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-.test/*.html   linguist-vendored=false
+*.smk linguist-language=Python
+Snakefile linguist-language=Python
+.test/* linguist-vendored=false
