--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,5 @@
 Snakefile linguist-language=Python
 .test/* linguist-vendored=false
 .test/report.html linguist-generated=true
-src/includes/gzstream/* linguist-vendored
-src/includes/catch/* linguist-vendored
+src/includes/gzstream/* linguist-vendored=true
+src/includes/catch/* linguist-vendored=true
