fix language, try 3

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,5 @@
 *.smk linguist-language=Python
 Snakefile linguist-language=Python
-.test/* linguist-vendored=false
-.test/report.html linguist-generated=true
-src/includes/gzstream/* linguist-vendored=true
-src/includes/catch/* linguist-vendored=true
+.test/report.html linguist-vendored
+src/includes/gzstream/* linguist-vendored
+src/includes/catch/* linguist-vendored
