--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 *.smk linguist-language=Python
 Snakefile linguist-language=Python
-.test/report.html linguist-vendored
-src/includes/gzstream/* linguist-vendored
-src/includes/catch/* linguist-vendored
+.test/* linguist-vendored=false
+.test/report.html linguist-generated=true
+src/includes/gzstream/* linguist-generated=true
+src/includes/catch/* linguist-generated=true
