--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,5 @@
 Snakefile linguist-language=Python
 .test/* linguist-vendored=false
 .test/report.html linguist-generated
-src/includes/gzstream/* linguist-vendored
-src/includes/catch/* linguist-vendored
+exceRNApipeline/includes/gzstream/* linguist-vendored
+exceRNApipeline/includes/catch/* linguist-vendored
