--- a/environment.yml
+++ b/environment.yml
@@ -5,206 +5,18 @@ channels:
   - defaults
   - r
 dependencies:
-  - _libgcc_mutex=0.1
-  - aioeasywebdav=2.4.0
-  - aiohttp=3.6.1
-  - alsa-lib=1.1.5
-  - appdirs=1.4.3
-  - async-timeout=3.0.1
-  - attrs=19.3.0
-  - bcrypt=3.1.7
-  - biopython=1.74
-  - boost=1.70.0
-  - boost-cpp=1.70.0
-  - boto3=1.10.19
-  - botocore=1.13.19
-  - bzip2=1.0.8
-  - ca-certificates=2019.11.28
-  - cachetools=3.1.1
-  - cairo=1.16.0
-  - certifi=2019.11.28
-  - cffi=1.13.2
-  - chardet=3.0.4
-  - configargparse=0.13.0
-  - cryptography=2.8
-  - curl=7.65.3
-  - cycler=0.10.0
-  - datrie=0.8
-  - dbus=1.13.6
-  - decorator=4.4.1
-  - dill=0.3.1.1
-  - docutils=0.15.2
-  - dropbox=9.4.0
-  - expat=2.2.5
-  - fastqc=0.11.8
-  - fftw=3.3.8
-  - filechunkio=1.8
-  - font-ttf-dejavu-sans-mono=2.37
-  - fontconfig=2.13.1
-  - freetype=2.10.0
-  - fribidi=1.0.5
-  - ftputil=3.4
-  - gdk-pixbuf=2.32.2
-  - gettext=0.19.8.1
-  - ghostscript=9.18
-  - giflib=5.1.7
-  - gitdb2=2.0.6
-  - gitpython=3.0.5
-  - glib=2.58.3
-  - gobject-introspection=1.58.2
-  - google-api-core=1.14.3
-  - google-auth=1.7.0
-  - google-cloud-core=1.0.3
-  - google-cloud-storage=1.23.0
-  - google-resumable-media=0.5.0
-  - googleapis-common-protos=1.6.0
-  - graphite2=1.3.13
-  - graphviz=2.40.1
-  - gst-plugins-base=1.14.5
-  - gstreamer=1.14.5
-  - harfbuzz=2.4.0
-  - htseq=0.11.2
-  - htslib=1.9
-  - htstream=1.1.0
-  - icu=64.2
-  - idna=2.8
-  - imagemagick=7.0.9_2
-  - importlib_metadata=0.23
-  - jbig=2.1
-  - jinja2=2.10.3
-  - jmespath=0.9.4
-  - jpeg=9c
-  - jsonschema=3.1.1
-  - kiwisolver=1.1.0
-  - krb5=1.16.3
-  - lcms2=2.9
-  - libblas=3.8.0
-  - libcblas=3.8.0
-  - libclang=9.0.0
-  - libcroco=0.6.13
-  - libcurl=7.65.3
-  - libdeflate=1.0
-  - libedit=3.1.20170329
-  - libffi=3.2.1
-  - libgcc=7.2.0
-  - libgcc-ng=9.1.0
-  - libgfortran-ng=7.3.0
-  - libiconv=1.15
-  - liblapack=3.8.0
-  - libllvm9=9.0.0
-  - libmagic=5.36
-  - libopenblas=0.3.7
-  - libpng=1.6.37
-  - libprotobuf=3.10.1
-  - librsvg=2.46.3
-  - libssh2=1.8.2
-  - libstdcxx-ng=9.1.0
-  - libtiff=4.1.0
-  - libtool=2.4.6
-  - libuuid=2.32.1
-  - libwebp=1.0.2
-  - libxcb=1.13
-  - libxkbcommon=0.9.1
-  - libxml2=2.9.10
-  - lz4-c=1.8.3
-  - markupsafe=1.1.1
+  - biopython=1.76
+  - fastqc=0.11.9
+  - htseq=0.11.3
+  - htstream=1.2.0
   - matplotlib=3.1.2
   - matplotlib-base=3.1.2
-  - more-itertools=7.2.0
-  - multidict=4.5.2
-  - multiprocess=0.70.9
-  - ncurses=6.1
-  - networkx=2.4
-  - nspr=4.23
-  - nss=3.47
-  - numpy=1.17.3
-  - openjdk=11.0.1
-  - openjpeg=2.3.1
-  - openssl=1.1.1d
-  - pandas=0.25.3
-  - pango=1.42.4
-  - paramiko=2.6.0
+  - pandas=1.0.2
   - pathos=0.2.5
-  - patsy=0.5.1
-  - pcre=8.43
-  - perl=5.26.2
-  - pip=19.3.1
-  - pixman=0.38.0
-  - pkg-config=0.29.2
-  - pox=0.2.7
-  - ppft=1.6.6.1
-  - prettytable=0.7.2
-  - protobuf=3.10.1
-  - psutil=5.6.5
-  - pthread-stubs=0.4
-  - pyasn1=0.4.8
-  - pyasn1-modules=0.2.7
-  - pycparser=2.19
-  - pygments=2.4.2
-  - pygraphviz=1.3
-  - pynacl=1.3.0
-  - pyopenssl=19.0.0
-  - pyparsing=2.4.5
-  - pyqt=5.12.3
-  - pyrsistent=0.15.5
-  - pysam=0.15.3
-  - pysftp=0.2.9
-  - pysocks=1.7.1
   - python=3.7.3
-  - python-dateutil=2.8.0
-  - python-irodsclient=0.7.0
   - python-magic=0.4.15
-  - pytz=2019.3
-  - pyyaml=5.1.2
-  - qt=5.12.5
-  - ratelimiter=1.2.0
-  - readline=8.0
-  - requests=2.22.0
-  - rsa=4.0
-  - s3transfer=0.2.1
-  - samtools=1.9
-  - scipy=1.3.2
-  - seaborn=0.9.0
-  - setuptools=41.6.0
-  - six=1.13.0
-  - smmap2=2.0.5
-  - snakemake=5.8.1
-  - snakemake-minimal=5.8.1
-  - sqlite=3.30.1
+  - samtools=1.10
+  - seaborn=0.10.0
+  - snakemake=5.10.0
+  - swig=4.0.1
   - star=2.7.3a
-  - statsmodels=0.10.2
-  - tk=8.6.9
-  - tornado=6.0.3
-  - urllib3=1.25.7
-  - wheel=0.33.6
-  - wrapt=1.11.2
-  - xmlrunner=1.7.7
-  - xorg-fixesproto=5.0
-  - xorg-inputproto=2.3.2
-  - xorg-kbproto=1.0.7
-  - xorg-libice=1.0.10
-  - xorg-libsm=1.2.3
-  - xorg-libx11=1.6.9
-  - xorg-libxau=1.0.9
-  - xorg-libxdmcp=1.1.3
-  - xorg-libxext=1.3.4
-  - xorg-libxfixes=5.0.3
-  - xorg-libxi=1.7.10
-  - xorg-libxpm=3.5.12
-  - xorg-libxrender=0.9.10
-  - xorg-libxt=1.1.5
-  - xorg-libxtst=1.2.3
-  - xorg-recordproto=1.14.2
-  - xorg-renderproto=0.11.1
-  - xorg-xextproto=7.3.0
-  - xorg-xproto=7.0.31
-  - xz=5.2.4
-  - yaml=0.1.7
-  - yarl=1.3.0
-  - zipp=0.6.0
-  - zlib=1.2.11
-  - zstd=1.4.4
-  - pip:
-    - pyqt5-sip==4.19.18
-    - pyqtwebengine==5.12.1
-
