--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,5 @@
 *.smk linguist-language=Python
 Snakefile linguist-language=Python
-.test/* linguist-vendored=false
-.test/report.html linguist-generated
+report.html linguist-generated
 exceRNApipeline/includes/gzstream/* linguist-vendored
 exceRNApipeline/includes/catch/* linguist-vendored
